--- a/provisioning/roles/modules/tasks/features.yml
+++ b/provisioning/roles/modules/tasks/features.yml
@@ -9,7 +9,7 @@
 - name: Enable features
   command: "drush -y en {{ item }}"
   args:
-    chdir: "{{ drupal_core_path }}"
+    chdir: "{{ drupal_core_path }}/sites/all/modules/local-features"
   with_items:
     - instructor_role
     - student_role
