--- a/provisioning/roles/modules/tasks/features.yml
+++ b/provisioning/roles/modules/tasks/features.yml
@@ -1,8 +1,9 @@
 ---
-- name: Pull in features
+- name: Pull in role features
   git:
     repo: https://github.com/lsulibraries/features-hist3119-s16.git
     dest: "{{ drupal_core_path }}/sites/all/modules/local-features"
+- name: pull in shax features
   git:
     repo: https://github.com/lsulibraries/geauxshax-shax-objects-feature.git
     dest: "{{ drupal_core_path }}/sites/all/modules/local-features"
