--- a/provisioning/roles/modules/defaults/main.yml
+++ b/provisioning/roles/modules/defaults/main.yml
@@ -1,7 +1,7 @@
 drupal_core_path: /var/www/drupal-7.x-dev
-modules_dir: "{{ drupal_core_path }}/sites/all/modules"
-themes_dir: "{{ drupal_core_path  }}/sites/all/themes"
-libraries_dir: "{{ drupal_core_path }}/sites/all/libraries"
+# modules_dir: "{{ drupal_core_path }}/sites/all/modules"
+# themes_dir: "{{ drupal_core_path  }}/sites/all/themes"
+# libraries_dir: "{{ drupal_core_path }}/sites/all/libraries"
 
 modules:
   - features
