--- a/provisioning/roles/modules/defaults/main.yml
+++ b/provisioning/roles/modules/defaults/main.yml
@@ -1,4 +1,4 @@
-drupal_core_path: /var/www/drupal-7.x-dev
+# drupal_core_path: /var/www/drupal-7.x-dev
 # modules_dir: "{{ drupal_core_path }}/sites/all/modules"
 # themes_dir: "{{ drupal_core_path  }}/sites/all/themes"
 # libraries_dir: "{{ drupal_core_path }}/sites/all/libraries"
