--- a/provisioning/local.yml
+++ b/provisioning/local.yml
@@ -7,5 +7,9 @@
   roles:
     - geerlingguy.drupal
     - modules
+  
 #    - backup-updates
     # todo: install postfix as internet site...
+  tasks:
+  - name: restart apache
+    service: name=apache2 state=restarted
