--- a/provisioning/roles/modules/tasks/main.yml
+++ b/provisioning/roles/modules/tasks/main.yml
@@ -24,6 +24,7 @@
 
 - name: Set permissions so that we can generate features on the host
   file:
-    path: "{{ drupal_core_path }}/sites/all/modules/local-features"
+    # path: "{{ drupal_core_path }}/sites/all/modules/local-features"
+    path: "{{ drupal_core_path }}"
     owner: www-data
     recurse: yes
