--- a/provisioning/roles/modules/tasks/main.yml
+++ b/provisioning/roles/modules/tasks/main.yml
@@ -21,6 +21,9 @@
 
 - include: features.yml
 
+- name: set default theme
+  command: "drush vset theme_default skeletontheme"
+
 
 - name: Set permissions so that we can generate features on the host
   file:
